Esempio descrittore tabelle più significativo

--- a/Abap/01.Sintassi.md
+++ b/Abap/01.Sintassi.md
@@ -316,20 +316,22 @@ Per poter ottenere la struttura di una tabella interna (nome e tipo delle colonn
 
 ```abap
 
+ FORM get_dynamic_field USING istructure TYPE data.
   "mapping partner
   DATA : lo_ref_descr TYPE REF TO cl_abap_structdescr,
-         lt_detail   TYPE abap_compdescr_tab,
-         ls_detail   LIKE LINE OF lt_detail,
-         ls_c_compcd TYPE idwtcompcd.
+         lt_detail    TYPE abap_compdescr_tab,
+         ls_detail    LIKE LINE OF lt_detail,
+         ls_c_compcd  TYPE idwtcompcd.
 
-  lo_ref_descr ?= cl_abap_typedescr=>describe_by_data( ls_c_compcd ). "Chiamare metodo statico su una struttura
-  lt_detail[] = lo_ref_descr->components. 
+  lo_ref_descr ?= cl_abap_typedescr=>describe_by_data( istructure ). "Chiamare metodo statico su una struttura
+  lt_detail[] = lo_ref_descr->components.
 
   LOOP AT lt_detail INTO ls_detail.
-  ls_detail-name 
-  assign component ls_detail-name of structure ls_idoc to field-symbol(<ls_comp>)
+    ASSIGN COMPONENT ls_detail-name OF STRUCTURE istructure TO FIELD-SYMBOL(<ls_comp>).
     "Qui ho le colonne della tabella
   ENDLOOP.
+  
+ENDFORM.
   
 ```
 <h1>Eventi</h1>
