--- a/Abap/03.Functions.md
+++ b/Abap/03.Functions.md
@@ -118,6 +118,11 @@ Di seguito tabella con i parametri per chiamare la multiobject
 ```
 <b>Non è possibile testarla da SE37</b>
 
+**Smartforms - Trovare il nome della function**
+```abap
+ SSF_FUNCTION_MODULE_NAME
+ ```
+ 
 **Testi estesi** <br>
 Per inserire tutto il testo esteso in una riga: <br><br>
 
