--- a/Abap/01.Sintassi.md
+++ b/Abap/01.Sintassi.md
@@ -270,10 +270,10 @@ loop at it_example reference into data(lr_example).
 endloop.
 
 read table it_example reference into data(lr_example) with key matnr = '22000000'.
+IF lr_example IS BOUND.
+...
+ENDIF.
 ```
-
-La reference crea un puntatore (field-symbol) che non può essere riassegnato. Sarà quindi fisso per quella cella di memoria.
-Se si modificano i valori della reference verranno aggiornati i valori in memoria. E' consigliata per evitare eccessivi controlli di assegnazione come per i field-symbol.
 
 Se si vuole leggere una riga o il valore di una riga senza doverne modificare il valore è consigliato utilizzare controlli inline:
 ```abap
