--- a/Abap/02.Alv.md
+++ b/Abap/02.Alv.md
@@ -16,49 +16,66 @@ In questo modulo è possibile nascondere o mostrare i vari elementi contenuti ne
 
  ### FieldCatalog
  Il field catalog è la tabella che contiene le proprietà dei dati che verranno stampati tramite la ALV. In questo caso il field catalog viene creato dinamicamente, utilizzando il descrittore di tabelle. Siccome prende i testi dei dati dalla tabella dd04t è possibile che non tutti i campi vengano valorizzati (oppure con la presenza di più campi dello stesso tipo). In quel caso sono da inserire a mano. 
+ 
+ Nel seguente esempio la tabella *IT_CUSTOM_FC* viene utilizzata per modificare valori particolari del fieldcatalog.
+ 
+ FIELDNAME = 'matnr' fc_component = 'scrtext_l' value = 'Descr. colonna matnr custom'
 
 ```abap
-  DATA:lv_fieldname TYPE string,
-       fs_desc TYPE REF TO cl_abap_structdescr,
-       lr_typedescr TYPE REF TO cl_abap_typedescr,
-       dref TYPE REF TO data,
-       wa_fields TYPE abap_compdescr.
+value( IS_OUTTAB )	TYPE DATA	 " Riga tabella di output
+value( IT_CUSTOM_FC )	TYPE ZT_FC_CUSTOM OPTIONAL	table " Valori speciali per il fieldcatalog
+value( CT_FIELDCAT )	TYPE LVC_T_FCAT	Tabella finale fieldcatalog
 
-  FIELD-SYMBOLS: <fs_dref> type any,
+
+      DATA : lo_ref_descr TYPE REF TO cl_abap_structdescr,
+            lt_detail    TYPE abap_compdescr_tab,
+            ls_detail    LIKE LINE OF lt_detail,
+            lr_typedescr TYPE REF TO cl_abap_typedescr,
+            lv_counter   TYPE i VALUE 0.
+
+  FIELD-SYMBOLS: <fs_dref>  TYPE any,
                  <fs_fname> TYPE any.
 
-  CREATE DATA dref TYPE ('ty_outtab').
-  ASSIGN dref->* TO <fs_dref>.
-   fs_desc ?=  cl_abap_structdescr=>describe_by_data( <fs_dref> ) .
+  lo_ref_descr ?= cl_abap_typedescr=>describe_by_data( is_outtab ). "Chiamare metodo statico su una struttura
+  lt_detail[] = lo_ref_descr->components.
 
-  LOOP AT fs_desc->components INTO wa_fields.
-    CONCATENATE '<fs_dref>' '-' wa_fields-name INTO lv_fieldname .
-    ASSIGN (lv_fieldname) TO <fs_fname> .
-    ls_fcat-col_pos = sy-index.
-    lr_typedescr = cl_abap_typedescr=>describe_by_data( <fs_fname> ) .
+  LOOP AT lt_detail INTO ls_detail.
+    ASSIGN COMPONENT ls_detail-name OF STRUCTURE is_outtab TO FIELD-SYMBOL(<ls_comp>).
 
-    ls_fcat-ref_field = lr_typedescr->absolute_name+6.
-    ls_fcat-fieldname = wa_fields-name.
-    ls_fcat-outputlen = lr_typedescr->length.
+    IF <ls_comp> IS ASSIGNED.
+      ADD 1 TO lv_counter.
+      lr_typedescr = cl_abap_typedescr=>describe_by_data( <ls_comp> ) .
 
-    APPEND ls_fcat TO lt_fcat.
+      APPEND VALUE #(
+        ref_field = lr_typedescr->absolute_name+6
+        fieldname = ls_detail-name
+        outputlen = lr_typedescr->length
+        col_id    = lv_counter
+      ) TO ct_fieldcat.
 
-  ENDLOOP.
-
-    SELECT rollname, scrtext_m
-      FROM dd04t
-      INTO TABLE @DATA(lt_coldescr)
-      FOR ALL ENTRIES IN @lt_fcat
-      WHERE rollname EQ @lt_fcat-ref_field
-      AND ddlanguage EQ @sy-langu.
-
-  LOOP AT lt_fcat ASSIGNING FIELD-SYMBOL(<fs_fcat>).
-    IF line_exists( lt_coldescr[ rollname = <fs_fcat>-ref_field ] ).
-      <fs_fcat>-scrtext_m = lt_coldescr[ rollname = <fs_fcat>-ref_field ]-scrtext_m.
     ENDIF.
   ENDLOOP.
 
+   SELECT rollname, scrtext_m
+    FROM dd04t
+    INTO TABLE @DATA(lt_coldescr)
+    FOR ALL ENTRIES IN @ct_fieldcat
+    WHERE rollname EQ @ct_fieldcat-ref_field
+    AND ddlanguage EQ @sy-langu.
 
+
+  LOOP AT ct_fieldcat ASSIGNING FIELD-SYMBOL(<fs_fcat>).
+    <fs_fcat>-scrtext_m = VALUE #( lt_coldescr[ rollname = <fs_fcat>-ref_field ]-scrtext_m OPTIONAL ).
+
+    LOOP AT it_custom_fc ASSIGNING FIELD-SYMBOL(<fs_custom_fc>) WHERE fieldname EQ <fs_fcat>-fieldname.
+      TRANSLATE <fs_custom_fc> TO LOWER CASE.
+      ASSIGN COMPONENT <fs_custom_fc>-fc_component OF STRUCTURE <fs_fcat> TO FIELD-SYMBOL(<fs_comp>).
+      IF sy-subrc EQ 0.
+        <fs_comp> =  CONV #( <fs_custom_fc>-value ).
+      ENDIF.
+    ENDLOOP.
+
+  ENDLOOP.
 ```
 
  ### Chiamare ALV
