--- a/Abap/02.Alv.md
+++ b/Abap/02.Alv.md
@@ -62,7 +62,10 @@ value( CT_FIELDCAT )	TYPE LVC_T_FCAT	Tabella finale fieldcatalog
     FOR ALL ENTRIES IN @ct_fieldcat
     WHERE rollname EQ @ct_fieldcat-ref_field
     AND ddlanguage EQ @sy-langu.
-
+    
+  LOOP AT it_custom_fc REFERENCE INTO DATA(lr_cust_fc).
+    TRANSLATE lr_cust_fc->fieldname TO UPPER CASE.
+  ENDLOOP.
 
   LOOP AT ct_fieldcat ASSIGNING FIELD-SYMBOL(<fs_fcat>).
     <fs_fcat>-scrtext_m = VALUE #( lt_coldescr[ rollname = <fs_fcat>-ref_field ]-scrtext_m OPTIONAL ).
