--- a/Abap/01.Sintassi.md
+++ b/Abap/01.Sintassi.md
@@ -304,6 +304,13 @@ DATA(lt_count_imp) = VALUE tty_imp(
   ).
   ```
   
+  **Move-corresponding** <br>
+Il move corresponding è utile per spostare le righe di una tabella in una tabella di destinazione, con la conversione del tipo riga in base ai dati in movimento. Quando si deve aggiungere delle righe in una tabella con dentro dei record, il move-corresponding sovrascriverebbe i record gia presenti. 
+E' possibile bypassare questo problema con la sintassi:
+```abap
+gt_outtab = CORRESPONDING #( BASE ( gt_outtab ) lt_tmp_out ).
+```
+  
   **Contare righe secondo condizioni definite**
  ```abap
   DATA(lv_lines) = REDUCE i(
