--- a/Abap/01.Sintassi.md
+++ b/Abap/01.Sintassi.md
@@ -149,6 +149,15 @@ FORM OPERATION CHANGING  lv_n1 TYPE i
                          
 ENDFORM.
 ```
+
+**Stringhe**<br>
+Quando si cerca un valore specifico in una stringa contenente un separatore definito, è possibile ottenere velocemente la sottostringa grazie ad una di queste funzioni.
+```abap
+data(result) = segment( val = 'VAL1-VAL2-VAL3' index = 3 sep = '-' ).
+data(result) = match( val  = 'VAL1-VAL2-VAL3'  regex = '[^-]*$' ).
+data(result) = SubString( Val = 'VAL1-VAL2-VAL3' Off = Find( Val = 'VAL1-VAL2-VAL3' Regex = '-[^-]+$' ) + 1 ).
+```
+
 <h1>Query</h1>
 
 **Select single:** estraggo solo un valore
