--- a/Abap/03.Functions.md
+++ b/Abap/03.Functions.md
@@ -166,6 +166,32 @@ CALL FUNCTION 'RS_SUPPORT_SELECTIONS'
     others               = 3
   .
   ```
+  
+  **Workflow**<br>
+  Questa function reg consente di lanciare il workflow
+    ```abap
+value( IV_POLLING_INTERVAL )	TYPE I  DEFAULT 10	
+value( IV_TASK )	TYPE SWW_TASK OPTIONAL	Identificazione task
+value( IT_CONTAINER )	TYPE SWRTCONT OPTIONAL	Tabella contenitore
+value( IV_TIMEOUT )	TYPE I  DEFAULT 60	
+value( EV_STATUS )	TYPE SWW_WISTAT	Stato di elaborazione di un workitem
+value( EV_RET_CODE )	TYPE SY-SUBRC	Campo sistema ABAP: valore di ritorno di enunciati ABAP
+value( EV_WKF_INSTANCE )	TYPE SWW_WIID	ID workitem
+value( ET_MESSAGE )	TYPE USMD4_T_SWR_MESSAG	
 
+    
+      CALL FUNCTION '/REG/SYNC_WKF'
+      EXPORTING
+        polling_interval  = iv_polling_interval
+        task              = iv_task
+        input_container   = it_container
+        timeout           = iv_timeout
+      IMPORTING
+        status            = ev_status
+        return_code       = ev_ret_code
+        workflow_instance = ev_wkf_instance
+        messages          = et_message.
+  ```
+  
 Esiste un'alternativa alla read_text ovvero tramite estrazione da db ( <i>Vedere link esterni</i>).
 
