--- a/Abap/03.Functions.md
+++ b/Abap/03.Functions.md
@@ -21,6 +21,16 @@ CALL FUNCTION 'BAPI_CHARACT_GETDETAIL'
     .
 ```
 
+Estrarre il numero interno di una caratteristica
+``` abap
+  CALL FUNCTION 'CONVERSION_EXIT_ATINN_INPUT' "Convert char. name to internal char. number
+  EXPORTING
+    input =  'DIM_FORN'                   "               Characteristic Name
+  IMPORTING
+    output = lv_atinn                     "               Internal Characteristic Number
+    .
+```
+
 **Immagini** <br>
 Function per ottenere immagini caricate con SE78
 ```abap
