--- a/Abap/03.Functions.md
+++ b/Abap/03.Functions.md
@@ -25,7 +25,7 @@ Estrarre il numero interno di una caratteristica
 ``` abap
   CALL FUNCTION 'CONVERSION_EXIT_ATINN_INPUT' "Convert char. name to internal char. number
   EXPORTING
-    input =  'DIM_FORN'                   "               Characteristic Name
+    input =  'Nome_car'                   "               Characteristic Name
   IMPORTING
     output = lv_atinn                     "               Internal Characteristic Number
     .
