--- a/Abap/02.Alv.md
+++ b/Abap/02.Alv.md
@@ -4,6 +4,7 @@
  - [FieldCatalog](#FieldCatalog)
  - [Chiamare ALV](#ALV)
  - [Toolbar](#Toolbar)
+ - [Moduli](#Moduli)
 
  ### Dynpro
  La dynpro è la combinazione della logica e della view. Possiede dei moduli per la gestione di input (PAI) e di output (PBO). In questi moduli è possibile inserire del codice custom per modificare a piacimento dati o comportamenti di determinati elementi. La dynpro è identificata da un numero di 4 cifre e viene chiamata dal report tramite la chiamata <i>CALL SCREEN XXXX</i>.
@@ -347,4 +348,24 @@ CLASS ZREG_ALV_MANAGER IMPLEMENTATION.
     ENDCASE.
   ENDMETHOD.
 ENDCLASS.
+```
+
+### Moduli 
+Quando si chiama una ALV da un report è necessario utilizzare i moduli della dynpro che si chiama. I moduli sono INPUT e OUTPUT.
+Il primo gestisce i pulsanti, il secondo la visualizzazione dei campi.
+
+``` abap
+MODULE status_0100 OUTPUT.
+  SET PF-STATUS 'STAT100'.
+  SET TITLEBAR 'Test'.
+  
+  ... r_alv->set_table_for_first_display ...
+ENDMODULE.
+
+MODULE user_command_0100 INPUT.
+  CASE sy-ucomm.
+    WHEN 'BACK'.
+      LEAVE TO SCREEN 0.
+  ENDCASE.
+ENDMODULE.
 ```
