--- a/Abap/02.Alv.md
+++ b/Abap/02.Alv.md
@@ -254,17 +254,32 @@ DATA:  lo_doc_header         TYPE REF TO cl_dd_document.
 Toolbar Custom per alv oo.
 
 ```abap
-class ZREG_ALV_MANAGER definition
+class ZCL_ALV_MANAGER definition
   public
   create public .
 
 public section.
 
   types:
-    tty_outtab TYPE TABLE OF zqm_val_forn .
+    begin of ty_fc_custom,
+          fieldname      TYPE char255,
+          fc_component   TYPE char255,
+          value          TYPE char255,
+        end of ty_fc_custom .
+  types:
+    tty_fc_custom TYPE TABLE OF ty_fc_custom .
+  types:
+    begin of abap_componentdescr,
+            name       type string,
+            type       type ref to cl_abap_datadescr,
+            as_include type abap_bool,
+            suffix     type string,
+          end of abap_componentdescr .
+  types:
+    abap_component_tab type standard table of abap_componentdescr with key name .
 
-  data ALV type ref to CL_GUI_ALV_GRID .
-  data GT_OUTTAB type TTY_OUTTAB .
+  data GO_ALV type ref to CL_GUI_ALV_GRID .
+  data GV_PROGRAM_NAME type STRING .
 
   methods HANDLE_TOOLBAR
     for event TOOLBAR of CL_GUI_ALV_GRID
@@ -275,77 +290,202 @@ public section.
     for event USER_COMMAND of CL_GUI_ALV_GRID
     importing
       !E_UCOMM .
+  methods TOP_OF_PAGE
+    for event TOP_OF_PAGE of CL_GUI_ALV_GRID
+    importing
+      !E_DYNDOC_ID .
+  methods CONSTRUCTOR
+    importing
+      value(IV_PROGRAM_NAME) type STRING
+      value(IT_OUTTAB) type ANY
+      value(IO_ALV) type ref to CL_GUI_ALV_GRID
+      value(IT_TOOLBAR_BUTTON) type TTB_BUTTON optional
+      value(IT_CUSTOM_FC) type TTY_FC_CUSTOM optional .
+  methods GET_FCAT
+    returning
+      value(RT_FCAT) type LVC_T_FCAT .
 protected section.
+
+  data GT_COMPONENTS type ABAP_COMPONENT_TAB .
+  data GT_FCAT type LVC_T_FCAT .
+  data GT_TOOLBAR_BUTTON type TTB_BUTTON .
 private section.
 
-  methods HISTORYCAL
+  methods CREATE_DYN_FC
     importing
-      value(I_ROW) type LVC_INDEX .
-  methods SAVE .
+      value(IS_OUTTAB) type DATA
+      value(IT_CUSTOM_FC) type TTY_FC_CUSTOM optional
+    returning
+      value(CT_FIELDCAT) type LVC_T_FCAT .
 ENDCLASS.
 
-CLASS ZREG_ALV_MANAGER IMPLEMENTATION.
+
+
+CLASS ZCL_ALV_MANAGER IMPLEMENTATION.
 
 
 * <SIGNATURE>---------------------------------------------------------------------------------------+
-* | Instance Public Method ZREG_ALV_MANAGER->HANDLE_TOOLBAR
+* | Instance Public Method ZCL_ALV_MANAGER->CONSTRUCTOR
+* +-------------------------------------------------------------------------------------------------+
+* | [--->] IV_PROGRAM_NAME                TYPE        STRING
+* | [--->] IT_OUTTAB                      TYPE        ANY
+* | [--->] IO_ALV                         TYPE REF TO CL_GUI_ALV_GRID
+* | [--->] IT_TOOLBAR_BUTTON              TYPE        TTB_BUTTON(optional)
+* | [--->] IT_CUSTOM_FC                   TYPE        TTY_FC_CUSTOM(optional)
+* +--------------------------------------------------------------------------------------</SIGNATURE>
+  method CONSTRUCTOR.
+
+    DATA: lref_row_outtab  TYPE REF TO data,
+          lref_outtab TYPE REF TO data.
+
+    FIELD-SYMBOLS: <fs_outtab_row> TYPE any,
+                   <fs_outtab>     TYPE INDEX TABLE.
+
+    go_alv = io_alv.
+    gv_program_name = iv_program_name.
+    gt_toolbar_button = it_toolbar_button.
+
+    CREATE DATA lref_outtab LIKE it_outtab.
+    ASSIGN lref_outtab->* TO <fs_outtab>.
+
+    CREATE DATA lref_row_outtab LIKE LINE OF <fs_outtab>.
+    ASSIGN lref_row_outtab->* TO <fs_outtab_row>.
+
+    MOVE-CORRESPONDING it_outtab TO <fs_outtab>.
+
+    gt_fcat = create_dyn_fc( EXPORTING is_outtab = <fs_outtab_row> it_custom_fc = it_custom_fc ).
+
+  endmethod.
+
+
+* <SIGNATURE>---------------------------------------------------------------------------------------+
+* | Instance Private Method ZCL_ALV_MANAGER->CREATE_DYN_FC
+* +-------------------------------------------------------------------------------------------------+
+* | [--->] IS_OUTTAB                      TYPE        DATA
+* | [--->] IT_CUSTOM_FC                   TYPE        TTY_FC_CUSTOM(optional)
+* | [<-()] CT_FIELDCAT                    TYPE        LVC_T_FCAT
+* +--------------------------------------------------------------------------------------</SIGNATURE>
+  method CREATE_DYN_FC.
+
+     DATA : lo_ref_descr TYPE REF TO cl_abap_structdescr,
+            lt_detail    TYPE abap_compdescr_tab,
+            lt_field_det TYPE REF TO cl_abap_structdescr,
+            ls_detail    LIKE LINE OF lt_detail,
+            lr_typedescr TYPE REF TO cl_abap_typedescr,
+            lv_counter   TYPE i VALUE 0,
+            ls_compdescr TYPE abap_componentdescr.
+
+  FIELD-SYMBOLS: <fs_dref>  TYPE any,
+                 <fs_fname> TYPE any.
+
+  lo_ref_descr ?= cl_abap_typedescr=>describe_by_data( is_outtab ). "Chiamare metodo statico su una struttura
+  lt_detail[] = lo_ref_descr->components.
+
+  LOOP AT lt_detail INTO ls_detail.
+    ASSIGN COMPONENT ls_detail-name OF STRUCTURE is_outtab TO FIELD-SYMBOL(<ls_comp>).
+
+    IF <ls_comp> IS ASSIGNED.
+      ADD 1 TO lv_counter.
+
+      lr_typedescr = cl_abap_typedescr=>describe_by_data( <ls_comp> ) .
+
+      APPEND VALUE #(
+        ref_field = lr_typedescr->absolute_name+6
+        fieldname = ls_detail-name
+        outputlen = lr_typedescr->length
+        col_id    = lv_counter
+      ) TO ct_fieldcat.
+
+      ls_compdescr-name = ls_detail-name.
+      ls_compdescr-type ?= cl_abap_elemdescr=>describe_by_data( <ls_comp> ).
+      APPEND ls_compdescr TO gt_components.
+      CLEAR ls_compdescr.
+
+    ENDIF.
+  ENDLOOP.
+
+   SELECT rollname, scrtext_m
+    FROM dd04t
+    INTO TABLE @DATA(lt_coldescr)
+    FOR ALL ENTRIES IN @ct_fieldcat
+    WHERE rollname EQ @ct_fieldcat-ref_field
+    AND ddlanguage EQ @sy-langu.
+
+  LOOP AT it_custom_fc REFERENCE INTO DATA(lr_cust_fc).
+    TRANSLATE lr_cust_fc->fieldname TO UPPER CASE.
+  ENDLOOP.
+
+  LOOP AT ct_fieldcat ASSIGNING FIELD-SYMBOL(<fs_fcat>).
+    <fs_fcat>-scrtext_m = VALUE #( lt_coldescr[ rollname = <fs_fcat>-ref_field ]-scrtext_m OPTIONAL ).
+
+    LOOP AT it_custom_fc ASSIGNING FIELD-SYMBOL(<fs_custom_fc>) WHERE fieldname EQ <fs_fcat>-fieldname.
+      TRANSLATE <fs_custom_fc> TO LOWER CASE.
+      ASSIGN COMPONENT <fs_custom_fc>-fc_component OF STRUCTURE <fs_fcat> TO FIELD-SYMBOL(<fs_comp>).
+      IF sy-subrc EQ 0.
+        <fs_comp> =  CONV #( <fs_custom_fc>-value ).
+      ENDIF.
+    ENDLOOP.
+
+  ENDLOOP.
+
+
+  endmethod.
+
+
+* <SIGNATURE>---------------------------------------------------------------------------------------+
+* | Instance Public Method ZCL_ALV_MANAGER->GET_FCAT
+* +-------------------------------------------------------------------------------------------------+
+* | [<-()] RT_FCAT                        TYPE        LVC_T_FCAT
+* +--------------------------------------------------------------------------------------</SIGNATURE>
+  method GET_FCAT.
+    rt_fcat = gt_fcat.
+  endmethod.
+
+
+* <SIGNATURE>---------------------------------------------------------------------------------------+
+* | Instance Public Method ZCL_ALV_MANAGER->HANDLE_TOOLBAR
 * +-------------------------------------------------------------------------------------------------+
 * | [--->] E_OBJECT                       LIKE
 * | [--->] E_INTERACTIVE                  LIKE
 * +--------------------------------------------------------------------------------------</SIGNATURE>
-    METHOD handle_toolbar.
-
-    APPEND:
-
-    VALUE #(
-      butn_type = 3
-    ) TO e_object->mt_toolbar,
-
-    VALUE #(
-      function = 'HISTORICAL'
-      icon = icon_employee
-      quickinfo = 'Mostra storico'
-      text = 'Storico'
-      disabled = ' '
-    ) TO e_object->mt_toolbar,
-
-
-    VALUE #(
-      function = 'SAVE'
-      icon = icon_system_save
-      quickinfo = 'Salva'
-      text = 'Salva'
-      disabled = ' '
-    ) TO e_object->mt_toolbar.
+  METHOD handle_toolbar.
+    APPEND LINES OF gt_toolbar_button TO e_object->mt_toolbar.
   ENDMETHOD.
 
 
 * <SIGNATURE>---------------------------------------------------------------------------------------+
-* | Instance Public Method ZREG_ALV_MANAGER->HANDLE_USER_COMMAND
+* | Instance Public Method ZCL_ALV_MANAGER->HANDLE_USER_COMMAND
 * +-------------------------------------------------------------------------------------------------+
 * | [--->] E_UCOMM                        LIKE
 * +--------------------------------------------------------------------------------------</SIGNATURE>
-  METHOD handle_user_command.
+  METHOD HANDLE_USER_COMMAND.
 
-    DATA: lt_rows     TYPE lvc_t_row,
-          lt_sel_rows TYPE TABLE OF se16n_seltab.
+    DATA: lt_rows     TYPE lvc_t_row.
 
-    CASE e_ucomm.
-      WHEN 'HISTORICAL'.
-        CALL METHOD alv->get_selected_rows
-          IMPORTING
-            et_index_rows = lt_rows.
+    CALL METHOD go_alv->get_selected_rows
+      IMPORTING
+        et_index_rows = lt_rows.
 
-        IF lines( lt_rows ) EQ 1.
-          historycal( i_row = lt_rows[ 1 ]-index ).
-        ENDIF.
+    IF lines( lt_rows ) GT 0.
+      PERFORM (e_ucomm) IN PROGRAM (gv_program_name) IF FOUND USING lt_rows.
+    ELSE.
+      PERFORM (e_ucomm) IN PROGRAM (gv_program_name) IF FOUND.
+    ENDIF.
+
+  ENDMETHOD.
 
 
+* <SIGNATURE>---------------------------------------------------------------------------------------+
+* | Instance Public Method ZCL_ALV_MANAGER->TOP_OF_PAGE
+* +-------------------------------------------------------------------------------------------------+
+* | [--->] E_DYNDOC_ID                    LIKE
+* +--------------------------------------------------------------------------------------</SIGNATURE>
+  METHOD top_of_page.
 
-      WHEN 'SAVE'.
-        save( ).
-
-    ENDCASE.
+    CALL METHOD e_dyndoc_id->add_text
+      EXPORTING
+        text      = 'Header'
+        sap_style = cl_dd_area=>heading.
   ENDMETHOD.
 ENDCLASS.
 ```
