--- a/Abap/01.Sintassi.md
+++ b/Abap/01.Sintassi.md
@@ -203,13 +203,34 @@ SELECT campo1 campo2
   
 *  Nella condizione del WHERE è utilizzabile anche  '<> @( VALUE #( ) )' per indicare un valore vuoto 
 ```
+**For All Entries**
+Il *for all entries* viene utilizzato per fare un'estrazione per ogni record di una tabella interna.   
+NON METTERE SELECT NEI LOOP!   
+Il limite delle select con il for all entries è che molte funzioni di raggruppamento e alcune keyword della sintassi nuova non sono utilizzabili. Se si sta utilizzando un sistema aggiornato (SAP BASIS 752) è possibile evitare il for all entries ( per approfondimenti vedere link esterni ):   
+```abap
+SELECT campo1 campo2
+  FROM table INTO CORRESPONDING FIELDS OF TABLE tab
+  WHERE condizione.
+  
+" For all entries
+SELECT campo1 campo2
+  FROM table INTO TABLE tab2
+  FOR ALL ENTRIES IN tab
+  WHERE campo1 = tab-campo1.
+  
+ " Senza for all entries
+ SELECT campo1 campo2
+  FROM table INTO TABLE tab2
+  WHERE campo1 EQ ( select campo1 from @tab ).
+  
+```   
 **Da select a range:** estraggo più valori
 ```abap
   SELECT sign opt AS option low high FROM /reg/param_selop
          INTO CORRESPONDING FIELDS OF TABLE itab_tipo_range
          WHERE zfunz EQ nomezfunz.
   
-*  Nella condizione del WHERE è utilizzabile anche  '<> @( VALUE #( ) )' per indicare un valore vuoto 
+*  Nella condizione del WHERE è utilizzabile anche  '<> @( VALUE #( ) )' per indicare un valore vuoto. Preferibile usare @space.
 ```
 **ATTENZIONE:**
 > Per le query esistono due sintassi: la sintassi vecchia che non richiede la virgola tra i campi da selezionare, la nuova sintassi si. 
