--- a/Abap/01.Sintassi.md
+++ b/Abap/01.Sintassi.md
@@ -221,7 +221,7 @@ SELECT campo1 campo2
  " Senza for all entries
  SELECT campo1 campo2
   FROM table INTO TABLE tab2
-  WHERE campo1 EQ ( select campo1 from @tab ).
+  WHERE campo1 IN ( select campo1 from @tab ).
   
 ```   
 **Da select a range:** estraggo più valori
