--- a/Abap/03.Functions.md
+++ b/Abap/03.Functions.md
@@ -1,4 +1,4 @@
-**Caratteristiche** <br>
+**Caratteristiche**   
 Estrarre i dati di una caratteristica (descrizione, valori possibili, ecc...)
 
 ```abap
@@ -31,7 +31,21 @@ Estrarre il numero interno di una caratteristica
     .
 ```
 
-**Immagini** <br>
+**Date**   
+Funcion per aggiungere o togliere n tempo ad una data di partenza e calcolare correttamente la data di arrivo
+``` abap
+CALL FUNCTION 'RP_CALC_DATE_IN_INTERVAL'
+      EXPORTING
+        date      = sy-datum
+        days      = CONV dlydy( lv_giorni )
+        months    = 0
+        years     = 0
+        signum    = '-'
+      IMPORTING
+        calc_date = lv_past_date.
+```   
+
+**Immagini**   
 Function per ottenere immagini caricate con SE78
 ```abap
 CALL METHOD cl_ssf_xsf_utilities=>get_bds_graphic_as_bmp
