--- a/Abap/01.Sintassi.md
+++ b/Abap/01.Sintassi.md
@@ -85,7 +85,7 @@ SELECT  atwrt FROM cawn INTO TABLE @family_tab
 AT SELECTION-SCREEN ON VALUE-REQUEST FOR in_family.
   CALL FUNCTION 'F4IF_INT_TABLE_VALUE_REQUEST'
     EXPORTING
-      retfield    = 'in_family'
+      retfield    = 'ATWRT' "Nome del campo in tabella 
       dynpprog    = sy-repid
       dynpnr      = sy-dynnr
 *multiple_choice = ''
