--- a/Abap/01.Sintassi.md
+++ b/Abap/01.Sintassi.md
@@ -68,30 +68,56 @@ in_data = '20190709'. "Imposto come valore consigliato la data 09-07-2019
 ```
 
 **Search Help**<br>
-Un search help viene utilizzato per la ricerca di valori possibili per un determinato campo in input.
+Un search help viene utilizzato per la ricerca di valori possibili per un determinato campo in input. 
 
 ```abap
-PARAMETERS: in_family TYPE atwrt.
+************************************************************************
+* CUSTOM TYPES
+************************************************************************
+BEGIN OF ty_variant,
+         variant TYPE variant,
+       END OF ty_variant.
+       
+************************************************************************
+* GLOBAL DATA
+************************************************************************
+gt_variant TYPE TABLE OF ty_variant.
 
-TYPES: BEGIN OF ty_atwrt,
-         atwrt TYPE cawn-atwrt,
-       END OF ty_atwrt.
-family_tab TYPE TABLE OF ty_atwrt.
+************************************************************************
+* SELECTION SCREEN
+************************************************************************
+PARAMETERS: p_varnt TYPE variant.
 
+************************************************************************
+* INITIALIZATION
+************************************************************************
 INITIALIZATION.
-SELECT  atwrt FROM cawn INTO TABLE @family_tab
-    WHERE atinn = '0000000008'.
-    
-AT SELECTION-SCREEN ON VALUE-REQUEST FOR in_family.
-  CALL FUNCTION 'F4IF_INT_TABLE_VALUE_REQUEST'
+
+SELECT variant
+  FROM varid
+  INTO TABLE gt_variant
+  WHERE report EQ sy-repid.
+
+************************************************************************
+* AT SELECTION SCREEN
+************************************************************************
+AT SELECTION-SCREEN ON VALUE-REQUEST FOR p_varnt.
+  DATA: ls_variant TYPE ty_variant,
+        lt_ret TYPE TABLE OF ddshretval,
+        ls_ret TYPE ddshretval.
+
+ CALL FUNCTION 'F4IF_INT_TABLE_VALUE_REQUEST'
     EXPORTING
-      retfield    = 'ATWRT' "Nome del campo in tabella 
+      retfield    = 'VARIANT'
       dynpprog    = sy-repid
       dynpnr      = sy-dynnr
-*multiple_choice = ''
       value_org   = 'S'
     TABLES
-      value_tab   = family_tab.
+      value_tab   = gt_variant
+      return_tab  = lt_ret.
+
+ READ TABLE lt_ret INTO ls_ret INDEX 1.
+ p_varnt = ls_ret-fieldval.
 ```
 
 
