--- a/Abap/00.LinkEsterni.md
+++ b/Abap/00.LinkEsterni.md
@@ -1,5 +1,8 @@
  - Batch Input
    - https://www.guru99.com/bdc-batch-data-communication.html#1
+   
+ - BTE
+  - https://wiki.scn.sap.com/wiki/display/BPX/Business+Transaction+Events+-+Process+Interface+-+Event+00001040+-+customer+implementation+for+dunning+notice+via+email
   
  - Casting 
    - https://blogs.sap.com/2013/05/27/abap-news-for-release-740-constructor-operators-conv-and-cast/
