--- a/Abap/03.Functions.md
+++ b/Abap/03.Functions.md
@@ -127,9 +127,9 @@ Di seguito tabella con i parametri per chiamare la multiobject
 | Oggetto SAP        | i_clastype    | object                   | i_objecttable |
 | ------------------ | ------------- | -------------------------| ------------- |
 | ODA                |     300       | ekpo-ebeln && ekpo-ebelp |      no       |
-| ODV                |     300       | vbap-vbeln && vbap-posnr |      VBAP     |
-| Partite            |     22||23    | aufk-mantr && aufk-charg |      no       |
-
+| ODV                |     300       | vbap-vbeln && vbap-posnr |   VBAP/VBPS   |
+| Partite            |     023       | aufk-mantr && aufk-posnr |      MCH1     |
+| Materiale          |     001       | mara-matnr               |      MARA     |
 
 **Peso** <br>
 ```abap
