--- a/Abap/03.Functions.md
+++ b/Abap/03.Functions.md
@@ -71,11 +71,12 @@ In input riceve:
 - i_clastype: classe dell'oggetto da leggere
 - i_directtable ??
 </br>
-In output restituisce:   
-- et_values_char: valori delle caratteristiche tipo CHAR   
-- et_values_num: valori delle caratteristiche tipo NUM   
-- et_objects: oggetti di cui abbiamo estratto le caratteristiche    
-- eto_tab_w_char    
+
+In output restituisce:  </br> 
+- et_values_char: valori delle caratteristiche tipo CHAR  </br> 
+- et_values_num: valori delle caratteristiche tipo NUM   </br>
+- et_objects: oggetti di cui abbiamo estratto le caratteristiche   </br> 
+- eto_tab_w_char    </br>
 
 Esempio del codice:
 ```abap
