--- a/Abap/03.Functions.md
+++ b/Abap/03.Functions.md
@@ -82,11 +82,23 @@ Esempio del codice:
 ```abap
     
     " Tabelle da utilizzare
-    DATA: lt_objects_mtnr     TYPE TABLE OF clsel_search_objects,
-          lt_num              TYPE TABLE OF /reg/_alloc_values_num,
-          LT_BATCH_FILTER     type /REG/_TYT_CHARS_VAL,
-          lt_char_2br         TYPE RANGE OF atnam,
-          lt_char             TYPE TABLE OF /reg/_alloc_values_char,
+" Firma
+value( I_OBJECTTABLE )	TYPE TABELLE  DEFAULT 'MCH1'
+value( R_OBJECT )	TYPE TABLE OPTIONAL
+value( R_CHAR_FILT )	TYPE /REG/_TYT_CHARS_VAL OPTIONAL
+value( R_CHAR_TO_READ )	TYPE TABLE OPTIONAL
+value( I_CLASTYPE )	TYPE KLASSENART  DEFAULT '023'
+value( I_LEVEL )	TYPE I OPTIONAL
+value( I_DIRECTTABLE )	TYPE FLAG  DEFAULT SPACE
+value( I_CUOBJ_INT )	TYPE FLAG  DEFAULT SPACE
+value( I_VALDATE )	TYPE SYDATUM OPTIONAL
+value( IT_EXTENSION )	TYPE BAPIEXTT OPTIONAL
+ET_OBJECTS	TYPE TT_CLSEL_OBJECTS
+ET_AUSP	TYPE TT_AUSP
+ET_VALUES_CHAR	TYPE /REG/_TYT_ALLOC_VALUES_CHAR
+ET_VALUES_NUM	TYPE /REG/_TYT_ALLOC_VALUES_NUM
+ETO_TAB_W_CHAR	TYPE REF TO DATA
+" Fine Firma
           
     " Per le caratteristiche del materiale
     ls_objects-object(18) = ls_mara-matnr.
