--- a/Abap/03.Functions.md
+++ b/Abap/03.Functions.md
@@ -30,6 +30,32 @@ Estrarre il numero interno di una caratteristica
     output = lv_atinn                     "               Internal Characteristic Number
     .
 ```
+Estrarre il valore di una caratteristica di una classificazione definita
+``` abap
+    DATA: lt_valnum  TYPE TABLE OF bapi1003_alloc_values_num,
+          lt_valchar TYPE TABLE OF bapi1003_alloc_values_char,
+          lt_valcurr TYPE TABLE OF bapi1003_alloc_values_curr,
+          lt_return  TYPE TABLE OF bapiret2,
+          ls_bapi1003_key TYPE bapi1003_key.
+
+    ls_bapi1003_key-object = ls_data-matnr.
+    ls_bapi1003_key-objecttable = 'MARA'.
+    ls_bapi1003_key-classnum = 'MATERIALICLIENTE'.
+    ls_bapi1003_key-classtype = '001'.
+
+    CALL FUNCTION 'BAPI_OBJCL_GETDETAIL'
+      EXPORTING
+        objectkey       = ls_bapi1003_key-object
+        objecttable     = ls_bapi1003_key-objecttable
+        classnum        = ls_bapi1003_key-classnum
+        classtype       = ls_bapi1003_key-classtype
+        keydate         = sy-datum
+      TABLES
+        allocvaluesnum  = lt_valnum
+        allocvalueschar = lt_valchar
+        allocvaluescurr = lt_valcurr
+        return          = lt_return.
+``` 
 
 **Date**   
 Funcion per aggiungere o togliere n tempo ad una data di partenza e calcolare correttamente la data di arrivo
