--- a/Abap/03.Functions.md
+++ b/Abap/03.Functions.md
@@ -60,6 +60,8 @@ Estrarre il valore di una caratteristica di una classificazione definita
 **Date**   
 Funcion per aggiungere o togliere n tempo ad una data di partenza e calcolare correttamente la data di arrivo
 ``` abap
+" Inserire i giorni da 0-31, mese 0-12, anni
+
 CALL FUNCTION 'RP_CALC_DATE_IN_INTERVAL'
       EXPORTING
         date      = sy-datum
@@ -69,6 +71,20 @@ CALL FUNCTION 'RP_CALC_DATE_IN_INTERVAL'
         signum    = '-'
       IMPORTING
         calc_date = lv_past_date.
+        
+" Aggiungi o sottrai N giorni con 0 < N < 365+, N mesi o anni
+CALL FUNCTION 'HR_SEN_CALE_DAYS_DATE' 
+  EXPORTING
+    id_date =                   " begda         
+*   id_operator = '+'           " adsub         
+    is_duration =               " psen_duration_dec 
+  IMPORTING
+    ed_date =                   " endda        
+  EXCEPTIONS
+    CONVERSION_NOT_SPECIFIED = 1  "             
+    CONVERSION_NOT_POSSIBLE = 2  "             
+    .  "  HR_SEN_CALE_DAYS_DATE
+
 ```   
 
 **Immagini**   
