--- a/Abap/03.Functions.md
+++ b/Abap/03.Functions.md
@@ -87,6 +87,14 @@ CALL FUNCTION 'HR_SEN_CALE_DAYS_DATE'
 
 ```   
 
+**sap gui**   
+Per controllare che un programma sia eseguito in background o in foreground è possibile utilizzare questa function.   
+ ```abap
+ CALL FUNCTION 'GUI_IS_AVAILABLE'
+    IMPORTING
+      return = lv_gui_is_available.   
+```
+
 **Immagini**   
 Function per ottenere immagini caricate con SE78
 ```abap
