--- a/Abap/01.Sintassi.md
+++ b/Abap/01.Sintassi.md
@@ -126,7 +126,7 @@ AT SELECTION-SCREEN ON VALUE-REQUEST FOR p_varnt.
 ```abap
 " Dichiaro diversi tipi di variabili seguendo la naming convention: 
 " - l = local,  g = global, i = import, e = export
-" - v = variable, s = structure, t = table, f = field
+" - v = variable, s = structure, t = table, f = field, r = range, ref = reference, o = object
 DATA: lv_werks TYPE werks_d,
       ls_ekko  TYPE ekko,
       lt_ekpo  TYPE TABLE OF ekpo. 
