--- a/Abap/01.Sintassi.md
+++ b/Abap/01.Sintassi.md
@@ -200,8 +200,9 @@ SELECT SINGLE campo1, campo2
 **Select count:** contare le righe di una select
 ```abap
 SELECT COUNT(*) 
-  FROM table INTO variable
+  FROM table
   WHERE condizione.
+ " sy-dbcnt contiene il counter
   
 SELECT COUNT( DISTINT nomecampo )
   FROM table INTO variable
