--- a/Abap/03.Functions.md
+++ b/Abap/03.Functions.md
@@ -134,7 +134,7 @@ Esempio del codice:
     " Tabelle da utilizzare
 " Firma
 value( I_OBJECTTABLE )	TYPE TABELLE  DEFAULT 'MCH1'
-value( R_OBJECT )	TYPE TABLE OPTIONAL
+value( R_OBJECT )	TYPE TT_CLSEL_OBJECTS OPTIONAL
 value( R_CHAR_FILT )	TYPE /REG/_TYT_CHARS_VAL OPTIONAL
 value( R_CHAR_TO_READ )	TYPE TABLE OPTIONAL
 value( I_CLASTYPE )	TYPE KLASSENART  DEFAULT '023'
