--- a/Abap/03.Functions.md
+++ b/Abap/03.Functions.md
@@ -136,7 +136,7 @@ Esempio del codice:
 value( I_OBJECTTABLE )	TYPE TABELLE  DEFAULT 'MCH1'
 value( R_OBJECT )	TYPE TT_CLSEL_OBJECTS OPTIONAL
 value( R_CHAR_FILT )	TYPE /REG/_TYT_CHARS_VAL OPTIONAL
-value( R_CHAR_TO_READ )	TYPE TABLE OPTIONAL
+value( R_CHAR_TO_READ )	TYPE TABLE OF /reg/range_atnam,
 value( I_CLASTYPE )	TYPE KLASSENART  DEFAULT '023'
 value( I_LEVEL )	TYPE I OPTIONAL
 value( I_DIRECTTABLE )	TYPE FLAG  DEFAULT SPACE
