--- a/Abap/01.Sintassi.md
+++ b/Abap/01.Sintassi.md
@@ -376,6 +376,15 @@ gt_outtab = CORRESPONDING #( BASE ( gt_outtab ) lt_tmp_out ).
       NEXT x = x + 1
     ).
 ```
+ **Ottenere numero riga secondo condizioni definite**
+  ```abap
+  DATA(lv_index) = line_index( lt_ihpavb[ parvw = 'AG' ] ).
+  ```
+  
+  **Ottenere numero righe tabella**
+  ```abap
+  DATA(lv_index) = lines( lt_ihpavb ).
+  ```
 Per poter ottenere la struttura di una tabella interna (nome e tipo delle colonne), è possibile utilizzare delle classi che aiutano l'estrazione di queste informazioni.
 
 ```abap
