Update idoc. Changed file location

--- a/CDS/01.CDSView.md
+++ b/CDS/01.CDSView.md
@@ -1,5 +1,5 @@
 <b>DEFINIZIONE GENERALE</b></br>
-La CDS view è un'infrastruttura che definisce un modello dati (simile ad una semplice view) e permette di creare questo modello dati nel database e non sul server. Questo vantaggio viene dato dal fatto che una view normale risiede nel dictionary e per l'estrazione dei dati deve creare una connessione a DB passando dal server. La CDS è un semplice 'oggetto' che risiede nel DB e quindi non deve essere gestita una connessione con quest'ultimo. Esistono CDS VIEW con e senza parametri, ABAP CDS e HANA CDS. Quando vengono selezionati i campi da estrarre possono essere decise le chiavi anteponendo al campo la parola key ( le chiavi devono essere contigue e partire dal primo campo ).
+La CDS view è un'infrastruttura che definisce un modello dati (simile ad una semplice view). Questo modello dati viene creato nel database e non sul server. Questo vantaggio viene dato dal fatto che una view normale risiede nel dictionary e per l'estrazione dei dati deve creare una connessione a DB passando dal server. La CDS è un semplice 'oggetto' che risiede nel DB e quindi non deve essere gestita una connessione con quest'ultimo. Esistono CDS VIEW con e senza parametri, ABAP CDS e HANA CDS. Quando vengono selezionati i campi da estrarre possono essere decise le chiavi anteponendo al campo la parola key ( le chiavi devono essere contigue e partire dal primo campo ).
 </br>
 </br>
 <b>ODATA SERVICE</b></br>
