--- a/Abap/03.Functions.md
+++ b/Abap/03.Functions.md
@@ -57,6 +57,17 @@ Estrarre il valore di una caratteristica di una classificazione definita
         return          = lt_return.
 ``` 
 
+**Campi tabella**   
+Ottnere i campi di una tabella distinti tra campi chiave e non chiave
+``` abap
+ CALL FUNCTION 'CACS_GET_TABLE_FIELDS'
+      EXPORTING
+        i_tabname     = p_table    " Table Name
+      TABLES
+        t_keyfield    = lt_keyfield   " Key Fields
+        t_nonkeyfield = lt_nonkeyfield. " Non Key Fields
+``` 
+
 **Date**   
 Funcion per aggiungere o togliere n tempo ad una data di partenza e calcolare correttamente la data di arrivo
 ``` abap
