--- a/Abap/03.Functions.md
+++ b/Abap/03.Functions.md
@@ -96,6 +96,15 @@ CALL FUNCTION 'HR_SEN_CALE_DAYS_DATE'
     CONVERSION_NOT_POSSIBLE = 2  "             
     .  "  HR_SEN_CALE_DAYS_DATE
 
+```  
+
+Convertire numeri float in date   
+```abap
+CALL FUNCTION 'CTCV_CONVERT_FLOAT_TO_DATE'
+            EXPORTING
+              float =
+            IMPORTING
+              date  = 
 ```   
 
 **sap gui**   
