--- a/Abap/02.Alv.md
+++ b/Abap/02.Alv.md
@@ -96,14 +96,21 @@ DATA: r_cont TYPE REF TO cl_gui_custom_container,
       
 DATA: it_fcat TYPE TABLE OF lvc_s_fcat,
       wa_fcat LIKE LINE OF it_fcat.
-      
- CREATE OBJECT r_cont
-    EXPORTING
-      container_name = 'CONT'.
+ 
+ 
+" Container custom
+* CREATE OBJECT r_cont
+*   EXPORTING
+*     container_name = 'CONT'.
 
-  CREATE OBJECT r_alv
-    EXPORTING
-      i_parent = r_cont.
+* CREATE OBJECT r_alv
+*   EXPORTING
+*     i_parent = r_cont.
+"
+
+" Container std -> si adatta allo schermo di chi usa l'alv
+ CREATE OBJECT r_alv
+    EXPORTING i_parent = cl_gui_container=>default_screen
 
   CALL METHOD r_alv->set_table_for_first_display
     EXPORTING
