--- a/Abap/03.Functions.md
+++ b/Abap/03.Functions.md
@@ -131,7 +131,37 @@ CALL METHOD cl_ssf_xsf_utilities=>get_bds_graphic_as_bmp
         internal_error = 2
         OTHERS         = 3.
 ``` 
+**Materiali**   
+Codice movimenti   
+ 01 - MB01 - Goods Receipts for Purchase Order   
+ 02 - MB31 - Goods Receipts for Prod Order   
+ 03 - MB1A - Goods Issue   
+ 04 - MB1B - Transfer Posting   
+ 05 - MB1C - Enter Other Goods Receipt   
+ 06 - MB11   
 
+
+Tipo movimenti   
+      Goods movement w/o reference   
+  B - Goods movement for purchase order   
+  F - Goods movement for production order   
+  L - Goods movement for delivery note   
+  K - Goods movement for kanban requirement (WM - internal only)   
+  O - Subsequent adjustment of "material-provided" consumption   
+  W - Subsequent adjustment of proportion/product unit material   
+  
+```abap
+CALL FUNCTION 'BAPI_GOODSMVT_CREATE'
+  EXPORTING
+    goodsmvt_header  = gmhead
+    goodsmvt_code    = gmcode
+  IMPORTING
+    goodsmvt_headret = mthead
+  TABLES
+    goodsmvt_item    = itab
+    return           = errmsg.
+```
+    
 **MultiOBJ** <br>
 Il metodo multiobj della classe reg viene utilizzato per l'estrazione delle caratteristiche. In base alle caratteristiche da estrarre si utilizzano varie combinazioni di accesso al metodo.</br>
 In input riceve:
