--- a/Abap/01.Sintassi.md
+++ b/Abap/01.Sintassi.md
@@ -131,6 +131,13 @@ data(result) = segment( val = 'VAL1-VAL2-VAL3' index = 3 sep = '-' ).
 data(result) = match( val  = 'VAL1-VAL2-VAL3'  regex = '[^-]*$' ).
 data(result) = SubString( Val = 'VAL1-VAL2-VAL3' Off = Find( Val = 'VAL1-VAL2-VAL3' Regex = '-[^-]+$' ) + 1 ).
 ```
+Per concatenare delle variabili in una stringa utilizzare la seguente sintassi:
+```abap
+CONCATENATE lv_var1 lv_var2 INTO lv_string.
+
+"740
+lv_string = |{ lv_var1 }{ lv_var2 }|.
+```
 
 <h1>Query</h1>
 
