--- a/Abap/03.Functions.md
+++ b/Abap/03.Functions.md
@@ -132,7 +132,7 @@ CALL METHOD cl_ssf_xsf_utilities=>get_bds_graphic_as_bmp
         OTHERS         = 3.
 ``` 
 **Materiali**   
-Codice movimenti   
+Codice movimenti - GMCODE
  01 - MB01 - Goods Receipts for Purchase Order   
  02 - MB31 - Goods Receipts for Prod Order   
  03 - MB1A - Goods Issue   
@@ -141,7 +141,7 @@ Codice movimenti
  06 - MB11   
 
 
-Tipo movimenti   
+Tipo movimenti - KZBEW 
       Goods movement w/o reference   
   B - Goods movement for purchase order   
   F - Goods movement for production order   
@@ -151,6 +151,12 @@ Tipo movimenti
   W - Subsequent adjustment of proportion/product unit material   
   
 ```abap
+gmhead-pstng_date = sy-datum.
+gmhead-doc_date = sy-datum.
+gmhead-pr_uname = sy-uname.
+
+gmcode-gm_code = '01'.   "01 - MB01 - Goods Receipts for Purchase Order
+
 CALL FUNCTION 'BAPI_GOODSMVT_CREATE'
   EXPORTING
     goodsmvt_header  = gmhead
