--- a/Abap/03.Functions.md
+++ b/Abap/03.Functions.md
@@ -30,6 +30,17 @@ Estrarre il numero interno di una caratteristica
     output = lv_atinn                     "               Internal Characteristic Number
     .
 ```
+
+Estrarre il nome di una caratteristica   
+``` abap
+  CALL FUNCTION 'CONVERSION_EXIT_ATINN_OUTPUT' "Convert internal char. number to char. name  
+  EXPORTING
+    input =  lv_atinn                     " Internal Characteristic Number               
+  IMPORTING
+    output = 'Nome car'                   " Characteristic Name              
+    .
+```
+
 Estrarre il valore di una caratteristica di una classificazione definita
 ``` abap
     DATA: lt_valnum  TYPE TABLE OF bapi1003_alloc_values_num,
