--- a/Abap/04.Mail.md
+++ b/Abap/04.Mail.md
@@ -3,97 +3,78 @@ Per generare una mail in abap, visibile poi nella SOST, ci si deve affidare a de
 In questo esempio viene generato un file .csv e poi spedito per mail ad una distribution list.   
 
 ```abap
-FORM send_notification .
-
-  DATA : obj_mail        TYPE REF TO cl_bcs,
-         obj_send        TYPE REF TO if_recipient_bcs,
-         l_output        TYPE boolean,
-         mail_body       TYPE bcsy_text,
-         lt_bin_excel    TYPE solix_tab,
-         lv_size         TYPE so_obj_len,
-         ls_tab_to_excel TYPE string.
-
-  CHECK lines( gt_outtab ) GT 0.
-
-" Trasformo la mia tabella interna in una tabella di stringhe
-  LOOP AT gt_outtab ASSIGNING FIELD-SYMBOL(<fs_outtab>).
-    LOOP AT gt_fcat ASSIGNING FIELD-SYMBOL(<fs_fcat>).
-      ASSIGN COMPONENT <fs_fcat>-fieldname OF STRUCTURE <fs_outtab> TO FIELD-SYMBOL(<fs_field_outtab>).
-      IF sy-subrc EQ 0.
-        ls_tab_to_excel = |{ ls_tab_to_excel }{ <fs_field_outtab> }{ cl_abap_char_utilities=>horizontal_tab }|.
-      ENDIF.
-    ENDLOOP.
-
-    ls_tab_to_excel = |{ ls_tab_to_excel }{ cl_abap_char_utilities=>newline }|.
-  ENDLOOP.
-
+  DATA:
+    lo_send_request TYPE REF TO cl_bcs,
+	lv_sender       TYPE REF TO cl_cam_address_bcs,
+	lo_pdf_content  TYPE solix_tab,
+	lo_document     TYPE REF TO cl_document_bcs,
+	lt_bodymail     TYPE bcsy_text,
+	lv_mail         TYPE string,
+	lv_sent_to_all  TYPE os_boolean,
+	lo_recipient    TYPE REF TO if_recipient_bcs,
+  
   TRY.
-      cl_bcs_convert=>string_to_solix(
-      EXPORTING
-      iv_string   = ls_tab_to_excel    " Input data
-      iv_codepage = '4103'            " Target Code Page in SAP Form  (Default = SAPconnect Setting)
-      iv_add_bom  =  'X'              " Add Byte-Order Mark
-      IMPORTING
-      et_solix    =  lt_bin_excel   " Output data
-      ev_size     =  lv_size            " Size of Document Content
-      ).
+	DATA(lv_size) = CONV so_obj_len( xstrlen( lv_fpformoutput-pdf ) ).
+      " istanza classe per gestione mail
+      lo_send_request = cl_bcs=>create_persistent( ).
 
-    CATCH cx_bcs.
+"istanza classe per gestione mittente
+      lv_sender = cl_cam_address_bcs=>create_internet_address(
+        i_address_string = CONV adr6-smtp_addr('indirizzo_owner')
+        i_address_name = CONV ADR6-SMTP_ADDR('indirizzo_mail_mittente')
+        ).
 
-  ENDTRY.
+	"converisone da xstring a formato necessario per invio attachmennt	
+	  lo_pdf_content = cl_document_bcs=>xstring_to_solix( 'pdf_content' ).
+	  
+	"creazione body
+	
+	APPEND 'Body della mail' TO lt_bodymail.
+	  
+	"creazione document mail
+      lo_document = cl_document_bcs=>create_document(
+                      i_type    = 'RAW'  "importante per avere il body in modo corretto
+                      i_sensitivity = 'P'
+                      i_text  = lt_bodymail
+                      i_sender = lv_sender
+                      i_subject = CONV so_obj_des('Oggetto della mail')
+                 ).
 
-  TRY.
-      obj_mail = cl_bcs=>create_persistent( ).
-    CATCH cx_send_req_bcs.
-  ENDTRY.
+      lv_size = CONV so_obj_len( xstrlen( pdf_xstring ) ).
 
-  TRY.
-      obj_send ?=  cl_distributionlist_bcs=>getu_persistent( i_dliname = 'ROTTAME_ITA' i_private = ' ' ).
-    CATCH cx_address_bcs.
-  ENDTRY.
-
-  TRY.
-      obj_mail->add_recipient( i_recipient  = obj_send ).
-    CATCH cx_send_req_bcs .
-  ENDTRY.
-
-  APPEND 'Quantità autorizzate rottame' TO mail_body.
-
-  TRY.
-      DATA(l_doc) =   cl_document_bcs=>create_document( i_type        = 'RAW'
-                                                        i_subject     = 'Quantità autorizzate rottame'
-                                                        i_sensitivity = 'P'
-                                                        i_text        = mail_body ).
-    CATCH cx_document_bcs .
-  ENDTRY.
-
-  TRY.
-      l_doc->add_attachment(
+	"gestione allegato mail, in questo caso PDF
+      lo_document->add_attachment(
         EXPORTING
-          i_attachment_type     = 'xls'
-          i_attachment_subject  = 'Allegato'
+          i_attachment_type     = CONV so_obj_tp('PDF')
+          i_attachment_subject  = CONV so_obj_des('Nome allegato')
           i_attachment_size     = lv_size
-          i_att_content_hex     = lt_bin_excel
-
+          i_att_content_hex     = lt_solix
       ).
-    CATCH cx_document_bcs .
-  ENDTRY.
 
-  TRY.
-      obj_mail->set_document( i_document = l_doc ).
-    CATCH cx_send_req_bcs .
-  ENDTRY.
+	  "viene settato il documento alla richiesta
+      lo_send_request->set_document( lo_document ).
+	  
+	  "viene settato il mittente
+      lo_send_request->set_sender(
+      EXPORTING
+          i_sender = lv_sender
+          ).
+      "viene settato il destinatario
+      lo_recipient = cl_cam_address_bcs=>create_internet_address(
+           i_address_string = |{ lv_mail }|
+      ).
+	  
+	  "viene aggiunto il destinatario alla richiesta
+      lo_send_request->add_recipient( i_recipient = lo_recipient ).
 
-  TRY.
-      CALL METHOD obj_mail->send
-        EXPORTING
-          i_with_error_screen = space
-        RECEIVING
-          result              = l_output.
-    CATCH cx_send_req_bcs .
-  ENDTRY.
 
-  COMMIT WORK.
+	"la richiesta viene messa nella SOST	
+      lv_sent_to_all = lo_send_request->send(
+        i_with_error_screen = 'X'
+       ).
 
-ENDFORM. "send_notification
+      COMMIT WORK.
+
+    CATCH cx_document_bcs INTO lx_document_bcs.
+  ENDTRY
 ```
