--- a/Abap/01.Sintassi.md
+++ b/Abap/01.Sintassi.md
@@ -340,9 +340,11 @@ INSERT VALUE #( matnr = '123') INTO TABLE lt_mara INDEX n.
 lt_mara = ( ( matnr = '123' ) ).
 ```
 
-<h1>Tabelle interne - Ordinamento e gestione valori</h1>
-**Raggruppamento di una tabella**<br>
-Se in una tabella ho bisogno di fare il *GROUP BY* basandomi su varie colonne, posso sfruttare il ciclo *FOR* per generare una tabella contenente il raggruppamento.
+<h1>Tabelle interne - Ordinamento e gestione valori</h1>   
+
+**Raggruppamento di una tabella**   
+Se in una tabella ho bisogno di fare il *GROUP BY* basandomi su varie colonne, posso sfruttare il ciclo *FOR* per generare una tabella contenente il raggruppamento.   
+
 ```abap
   TYPES: BEGIN OF ty_imp,
            sel4     TYPE p_pernr,
