--- a/Abap/03.Functions.md
+++ b/Abap/03.Functions.md
@@ -279,7 +279,48 @@ Di seguito tabella con i parametri per chiamare la multiobject
  ```
  
  **Popup**   
- https://sap4tech.net/abap-popup-types-and-samples-codes/
+ Popup generali
+ - https://sap4tech.net/abap-popup-types-and-samples-codes/   
+ 
+ Inserimento dati tramite popup (non controllati)   
+ ```abap
+  APPEND: VALUE #( tabname = 'LFA1' fieldname = 'LIFNR' field_obl = 'X' fieldtext = 'Fornitore' value = '001234' ) TO lt_fields_popup,
+          VALUE #( tabname = 'EBAN' fieldname = 'EKGRP' field_obl = 'X' fieldtext = 'Gruppo acquisti' ) TO lt_fields_popup.
+
+      TRY.
+        CALL FUNCTION 'POPUP_GET_VALUES'
+          EXPORTING
+            popup_title           = 'Creare RDA'
+         IMPORTING
+           RETURNCODE            = lv_subrc
+          tables
+            fields                = lt_fields_popup
+         EXCEPTIONS
+           ERROR_IN_FIELDS       = 1
+           OTHERS                = 2.
+        CATCH cx_root.
+      ENDTRY.
+ ```
+ 
+ Inserimento dati tramite popup con controllo di dati inseriti   
+ ```abap
+ APPEND: VALUE #( tabname = 'LFA1' fieldname = 'LIFNR' field_obl = 'X' fieldtext = 'Fornitore' value = '001234' ) TO lt_fields_popup,
+              VALUE #( tabname = 'EBAN' fieldname = 'EKGRP' field_obl = 'X' fieldtext = 'Gruppo acquisti' ) TO lt_fields_popup.
+
+      TRY.
+        CALL FUNCTION 'POPUP_GET_VALUES_DB_CHECKED'
+          EXPORTING
+            popup_title           = 'Creare RDA'
+         IMPORTING
+           RETURNCODE            = lv_subrc
+          tables
+            fields                = lt_fields_popup
+         EXCEPTIONS
+           ERROR_IN_FIELDS       = 1
+           OTHERS                = 2.
+        CATCH cx_root.
+      ENDTRY.
+ ```
  
 **Testi estesi** <br>
 Per inserire tutto il testo esteso in una riga: <br><br>
