--- a/Abap/04.Mail.md
+++ b/Abap/04.Mail.md
@@ -1,6 +1,6 @@
 <h1>Mail</h1>   
 Per generare una mail in abap, visibile poi nella SOST, ci si deve affidare a delle classi standard.
-In questo esempio viene generato un file .csv e poi spedito per mail ad una distribution list.   
+In questo esempio viene generato un file PDF e poi spedito per mail ad una distribution list.   
 
 ```abap
   DATA:
