--- a/Abap/03.Functions.md
+++ b/Abap/03.Functions.md
@@ -117,6 +117,36 @@ CALL FUNCTION 'CTCV_CONVERT_FLOAT_TO_DATE'
             IMPORTING
               date  = 
 ```   
+**Materiali**    
+Modificare dati materiale
+
+```abap
+CALL FUNCTION 'BAPI_MATERIAL_SAVEDATA'
+      EXPORTING
+        headdata             = ls_ts99900023-is_head_data
+        clientdata           = ls_ts99900023-is_client_data
+        clientdatax          = ls_ts99900023-is_client_datax
+        plantdata            = ls_ts99900023-is_plant_data
+        plantdatax           = ls_ts99900023-is_plant_datax
+        forecastparameters   = ls_ts99900023-is_forecastparam
+        forecastparametersx  = ls_ts99900023-is_forecastparamx
+        planningdata         = ls_ts99900023-is_planningdata
+        planningdatax        = ls_ts99900023-is_planningdatax
+        storagelocationdata  = ls_ts99900023-is_storagelocdata
+        storagelocationdatax = ls_ts99900023-is_storagelocdatax
+        valuationdata        = ls_ts99900023-is_valuationdata
+        valuationdatax       = ls_ts99900023-is_valuationdatax
+        warehousenumberdata  = ls_ts99900023-is_warehousenumdata
+        warehousenumberdatax = ls_ts99900023-is_warehousenumdatax
+        salesdata            = ls_ts99900023-is_salesdata
+        salesdatax           = ls_ts99900023-is_salesdatax
+        storagetypedata      = ls_ts99900023-is_storagetypedata
+        storagetypedatax     = ls_ts99900023-is_storagetypedatax
+      IMPORTING
+        return               = ls_error
+      TABLES
+        taxclassifications   = lt_taxnum.
+```    
 
 **sap gui**   
 Per controllare che un programma sia eseguito in background o in foreground è possibile utilizzare questa function.   
